# harmonic-preconf-example

./: .goreleaser.yaml  Cargo.toml  README.md  build.rs  rust-toolchain.toml
protos/: preconf.proto
src/: main.rs
